Fixed text alignment of day blocks.

--- a/src/scss/calendar-web-widget.scss
+++ b/src/scss/calendar-web-widget.scss
@@ -104,6 +104,10 @@
     width:100%;
     font-size: 14px;
     font-weight: bold;
+
+    td {
+    	text-align:center;
+    }
   }
 
   .calendar-footer {
